feat: Define, test, and implement Button